--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/flux": "^3.1.7",
     "@types/jsplumb": "^2.5.7",
+    "@types/underscore": "^1.8.8",
+    "flux": "^3.1.3",
     "jsplumb": "^2.7.13",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts-ts": "2.16.0"
+    "react-resize-detector": "^3.1.0",
+    "react-scripts-ts": "2.16.0",
+    "underscore": "^1.9.1"
   },
   "scripts": {
     "start": "react-scripts-ts start",
