--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
+    "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
+    "@fortawesome/react-fontawesome": "0.1.0-11",
     "@types/flux": "^3.1.7",
     "@types/jsplumb": "^2.5.7",
     "@types/underscore": "^1.8.8",
     "flux": "^3.1.3",
+    "i": "^0.3.6",
     "jsplumb": "^2.7.13",
+    "npm": "^6.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-resize-detector": "^3.1.0",
