--- a/package.json
+++ b/package.json
@@ -3,18 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
-    "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
-    "@fortawesome/react-fontawesome": "0.1.0-11",
-    "@types/flux": "^3.1.7",
-    "@types/jsplumb": "^2.5.7",
-    "@types/underscore": "^1.8.8",
     "flux": "^3.1.3",
     "i": "^0.3.6",
     "jsplumb": "^2.7.13",
+    "map-canvas-components": "file:../map-canvas-components",
     "npm": "^6.2.0",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "16.4.2",
+    "react-dom": "16.4.2",
     "react-resize-detector": "^3.1.0",
     "react-scripts-ts": "2.16.0",
     "underscore": "^1.9.1"
@@ -26,10 +21,17 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.2",
+    "@fortawesome/free-solid-svg-icons": "^5.2.0",
+    "@fortawesome/react-fontawesome": "^0.1.2",
+    "@types/flux": "^3.1.7",
     "@types/jest": "^23.3.1",
+    "@types/jsplumb": "^2.5.7",
     "@types/node": "^10.5.4",
-    "@types/react": "^16.4.7",
-    "@types/react-dom": "^16.0.6",
+    "@types/prop-types": "^15.5.5",
+    "@types/react": "16.4.11",
+    "@types/react-dom": "16.0.7",
+    "@types/underscore": "^1.8.8",
     "typescript": "^3.0.1"
   }
 }
